--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-editor",
+  "name": "ngx-editor-tmm",
   "version": "4.1.0",
   "description": "WYSIWYG Editor for Angular Applications",
   "license": "MIT",
@@ -32,7 +32,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sibiraj-s/ngx-editor.git"
+    "url": "git+https://github.com/ThomasMeyer88/ngx-editor.git"
   },
   "bugs": {
     "url": "https://github.com/sibiraj-s/ngx-editor/issues"
@@ -47,7 +47,7 @@
     "rxjs": "~6.2.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular/animations": "^6.1.0",
     "@angular/cli": "~6.2.4",
     "@angular/common": "^6.1.0",
@@ -60,7 +60,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@compodoc/compodoc": "^1.1.5",
+    "@compodoc/compodoc": "^1.1.9",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -68,9 +68,7 @@
     "chalk": "^2.4.1",
     "codelyzer": "~4.3.0",
     "core-js": "^2.5.4",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint": "^5.15.1",
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.0.1",
     "husky": "^1.1.2",
@@ -82,7 +80,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.3.0",
+    "ng-packagr": "^4.7.1",
     "ngx-bootstrap": "^3.0.1",
     "protractor": "~5.4.0",
     "rxjs": "~6.2.0",
@@ -90,5 +88,8 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2",
     "zone.js": "~0.8.26"
+  },
+  "dependencies": {
+    "ionic": "^4.12.0"
   }
 }
