--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-editor-tmm",
+  "name": "ngx-editor",
   "version": "4.1.0",
   "description": "WYSIWYG Editor for Angular Applications",
   "license": "MIT",
